src/objects/SMS_Template_Variable__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SMS Template Variable</label>
    <listViews>
        <fullName>Detailed</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Order_Number__c</columns>
        <columns>Active__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed</label>
    </listViews>
    <pluralLabel>SMS Template Variables</pluralLabel>
</CustomObject>